<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.cmpp.laboratorio05.ui.movie.viewmodel.MovieViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLayout"
        tools:context=".ui.movie.MovieFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:src="@drawable/star_wars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:text="@={movie.name}"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints"
            tools:text="@string/title_movie_text_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:text="@={movie.category}"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/category_movie_text_view" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:text="@={movie.qualification}"
            tools:text="@string/calification_number_edit_text"
            android:textColor="@color/calification"
            android:textSize="@dimen/dimen_text_calification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/default_gap"
            android:text="@={movie.description}"
            tools:text="@string/description_textview"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>